<resources>
    <string name="app_name">BaseHQ</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="product_categories">Product Categories</string>
    <string name="category_icon">Category icon</string>
    <string name="product_image">Product image</string>
    <string name="qtd">Qtd</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="cart">Cart</string>
    <string name="delete_item">Delete item</string>
    <string name="no_result_found_for_the_query">No Result found for the Query</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="try_again">Try Again</string>
</resources>