<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/product_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            tools:text="@string/product_categories" />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:isIndicator="true"
            android:max="5"
            android:numStars="5"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:stepSize="0.1"
            android:transformPivotX="0dp"
            android:transformPivotY="0dp"
            app:layout_constraintStart_toEndOf="@id/product_title"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <TextView
            android:id="@+id/product_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_title"
            tools:text="Loren ipsum loren ipsum loren ipsum loren ipsum" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:autofillHints="Quantity"
            android:hint="@string/qtd"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_desc" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_to_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_to_cart"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="@id/quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/quantity"
            app:layout_constraintTop_toTopOf="@id/quantity" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>